# nao_meshes-release

./: 0001-add-license-files-to-debian-packages.patch  0001-add-license-files.patch  0002-rename-template-file.patch  0002-rename-the-templates-file.patch  CHANGELOG.rst  CMakeLists.txt  README  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules
debian_license/: README
rpm/: ros-hydro-nao-meshes.spec  ros-indigo-nao-meshes.spec  template.spec
