<package>
  <name>nao_meshes</name>
  <version>0.1.1</version>
  <description>meshes for the Aldebaran Robotics NAO</description>
  <author email="vincent.rabaud@gmail.com">Vincent Rabaud</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>Apache 2.0</license>

  <url>http://github.com/vrabaud/nao_meshes/</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>
